conf/layer: fix preferred version selection to remove note/warning messages about available package versions

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -26,6 +26,11 @@ LICENSE_FLAGS_WHITELIST += "commercial_gstreamer1.0-plugins-ugly"
 LICENSE_FLAGS_WHITELIST += "commercial_libomxil"
 LICENSE_FLAGS_WHITELIST += "commercial_gstreamer1.0-omx"
 
+# WPE needs gstreamer plugins that need faad2
+LICENSE_FLAGS_WHITELIST += "commercial_faad2"
+
+PREFERRED_VERSION_wpewebkit = "20170728%"
+
 BB_DANGLINGAPPENDS_WARNONLY ?= "1"
 
 # Enable Turbo mode on Rpi2
